WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203457
[LFC][IFC] Completely collapsed runs should not have advance width
https://bugs.webkit.org/show_bug.cgi?id=203457
Summary
[LFC][IFC] Completely collapsed runs should not have advance width
alan
Reported
2019-10-26 04:57:23 PDT
https://drafts.csswg.org/css-text-3/#white-space-phase-1
Attachments
Patch
(11.65 KB, patch)
2019-10-26 05:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-26 04:57:43 PDT
<
rdar://problem/56645024
>
alan
Comment 2
2019-10-26 05:03:18 PDT
Created
attachment 382011
[details]
Patch
WebKit Commit Bot
Comment 3
2019-10-26 05:53:07 PDT
Comment on
attachment 382011
[details]
Patch Clearing flags on attachment: 382011 Committed
r251633
: <
https://trac.webkit.org/changeset/251633
>
WebKit Commit Bot
Comment 4
2019-10-26 05:53:09 PDT
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 5
2019-10-26 09:38:21 PDT
Do we have a way to write regression tests for LFC?
alan
Comment 6
2019-10-26 10:40:05 PDT
(In reply to Geoffrey Garen from
comment #5
)
> Do we have a way to write regression tests for LFC?
I periodically update the /Tools/LayoutReloaded/misc/LFC-passing-tests.txt file with newly passing tests and run regression test locally. I've been mostly testing LFC against fast/block and fast/text but I hear WPT has plenty of related tests.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug